# coach--backend

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  ENV_SETUP.md  FILES_CHECKLIST.md  ISSUES_FIXED.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCHEMA_FIXES.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md  alembic.ini  docker-compose.yml  env.example.txt  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  deps.py  logger.py  main.py
app/api/: v1.py
app/api/routers/: admin.py  auth.py  entries.py  habits.py  notifications.py  predictions.py  reports.py
app/core/: background.py  ml_loader.py  security.py
app/db/: base.py  models.py  seed.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: .gitkeep
app/ml/: features.py  model_registry.py  train.py
app/ml/saved_models/: .gitkeep
app/schemas/: auth.py  entry.py  habit.py  notification.py  prediction.py  reports.py
app/services/: auth_service.py  habit_service.py  notification_service.py  prediction_service.py  stats_service.py
app/tests/: conftest.py  test_auth.py  test_habits.py  test_predictions.py
app/workers/: celery_app.py  tasks.py
scripts/: create_initial_migration.sh
